
syntax = "proto3";

option csharp_namespace = "WebApp.Api.Grpc";

package MycroCloud.WebApp.Api;

import "google/protobuf/timestamp.proto";

service WebAppRouteGrpcService {
  rpc ListRoutes(ListRoutesRequest) returns (ListRoutesResponse);
  rpc GetRouteById(GetRouteByIdRequest) returns (GetRouteByIdResponse);
  rpc CreateRoute(CreateRouteRequest) returns (CreateRouteResponse);
  rpc EdiRoute(EditRouteRequest) returns (EditRouteResponse);
}
message ListRoutesRequest {
  int32 web_app_id = 1;
  int32 page = 2;
}
message ListRoutesResponse {
  message Route {
    int32 route_id = 1;
    string name = 2;
    string description = 3;
    string match_path = 4;
    repeated string match_methods = 5;
    int32 match_order = 6;
    google.protobuf.Timestamp created_date = 7;
    google.protobuf.Timestamp updated_date = 8;
    int32 authorization_type = 9;
    int32 response_provider = 10;
  }
  repeated Route routes = 1;
}
message GetRouteByIdRequest {
  string user_id = 1;
  string app_name = 2;
  int32 id = 3; 
}
message GetRouteByIdResponse {
  int32 id = 1;
  string app_name = 2;
  string name = 3;
  string description = 4;
  string match_path = 5;
  repeated string match_methods = 6;
  int32 match_order = 7;
  string authorization_json = 8;
  string validation_json = 9;
  int32 response_provider = 10;
  string response_json = 11;
  google.protobuf.Timestamp created_date = 12;
  google.protobuf.Timestamp updated_date = 13;
  int32 authorization_type = 14;
}
message MockResponse {
  message StatusCode {
    oneof value {
      int32 code = 1;
      string evaluated_expresion = 2;
    }
  }
  message Header {
    oneof value {
      string static_value = 1;
      string evaluated_expresion = 2;
    }
  }
  StatusCode status_code = 1;
  map<string, Header> headers = 2;
}
message ProxiedServer {

}
message CreateRouteRequest {
  int32 app_id = 1;
  string name = 2;
  string description = 3;
  repeated string match_methods = 4;
  string match_path = 5;
  int32 match_order = 6;
  int32 response_type = 7;
  oneof response {
    MockResponse mock_response = 8;
    ProxiedServer proxied_server = 9;
  }
}
message CreateRouteResponse {
  int32 route_id = 1;
}
message EditRouteRequest {
  string name = 1;
}
message EditRouteResponse {
  
}