
syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "WebApp.Api.Grpc";

package webapp;

service WebAppRoute {
  rpc GetAll(GetAllRouteRequest) returns (GetAllRouteResponse);
  rpc Get(GetRouteRequest) returns (GetRouteResponse);
  rpc CreateRoute(CreateRouteRequest) returns (CreateRouteResponse);
  rpc EdiRoute(EditRouteRequest) returns (EditRouteResponse);
}
message GetAllRouteRequest {
  string user_id = 1;
  string app_name = 2;
  int32 page = 3;
}
message GetAllRouteResponse {
  message Route {
    int32 id = 1;
    string name = 2;
    string description = 3;
    string match_path = 4;
    repeated string match_methods = 5;
    int32 match_order = 6;
    google.protobuf.Timestamp created_date = 7;
    google.protobuf.Timestamp updated_date = 8;
    int32 authorization_type = 9;
    int32 response_provider = 11;
  }
  repeated Route routes = 1;
}
message GetRouteRequest {
  string user_id = 1;
  string app_name = 2;
  int32 id = 3; 
}
message GetRouteResponse {
  int32 id = 1;
  string app_name = 2;
  string name = 3;
  string description = 4;
  string match_path = 5;
  repeated string match_methods = 6;
  int32 match_order = 7;
  string authorization_json = 8;
  string validation_json = 9;
  int32 response_provider = 10;
  string response_json = 11;
  google.protobuf.Timestamp created_date = 12;
  google.protobuf.Timestamp updated_date = 13;
  int32 authorization_type = 14;
}
message CreateRouteRequest {
  string name = 1;
}
message CreateRouteResponse {

}
message EditRouteRequest {
  string name = 1;
}
message EditRouteResponse {

}